# flat-and-stack

./: README.md  make_flat_dataset.py  pyproject.toml
output/: testing_1000_labels.npy  testing_500_labels.npy
